ocaml/testsuite/tests/typing-layouts/parsing_stable.compilers.reference
type 'a t0 = 'a list
type ('a : immediate) t0 = 'a list
Line 2, characters 11-15:
2 | type ('a : void) t0 = 'a list;;
               ^^^^
Error: Layout void is more experimental than allowed by -extension layouts.
       You must enable -extension layouts_alpha to use this feature.
Line 2, characters 11-15:
2 | type ('a : valu) t0 = 'a list;;
               ^^^^
Error: Syntax error: layout expected.
type t = float#
Line 2, characters 9-13:
2 | type t = int#;;
             ^^^^
Error: Syntax error: Unboxed type other than float# not expected.
Line 2, characters 9-17:
2 | type t = Float.t#;;
             ^^^^^^^^
Error: Syntax error: Unboxed type other than float# not expected.

